# physical-ai-textbook-speckit

./: .gitignore  404.html  CLAUDE.md  README.md  SUBMISSION.md  docker-compose.yml  index.html  sitemap.xml
.claude/: settings.local.json
.specify/memory/: constitution.md
.speckit/: constitution.md  tasks.md
assets/css/: styles.2f62cdbf.css
assets/js/: 00ee7c5d.302f55d1.js  17896441.2e580e65.js  1df93b7f.9def9115.js  21879321.03d43457.js  227a0adb.b0a88b94.js  29974d5a.b6938343.js  2dcab8e8.3bae3736.js  46db4f84.4c14b911.js  5dc74368.924795e7.js  6199fac3.5c8b78d5.js  70c2ad1b.bd55b0a4.js  9a339f8a.8f509bee.js  9c27c19b.9f6cead3.js  a94703ab.58df5333.js  d810ab6a.7824fe81.js  f8409a7e.11683fdf.js  main.a6214537.js  runtime~main.407eef40.js
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  ingest_simple.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241219_0001_initial_users_and_tokens.py  20241219_0002_chat_sessions_and_messages.py  20241219_0003_user_progress_tables.py
backend/src/api/: config.py  dependencies.py  main.py
backend/src/api/middleware/: cors.py  error_handler.py  logging.py  rate_limit.py
backend/src/api/routes/: auth.py  chat.py  health.py  progress.py
backend/src/db/: connection.py
backend/src/models/: __init__.py  base.py  chat.py  progress.py  refresh_token.py  schemas.py  user.py
backend/src/scripts/ingest/: __init__.py  ingest_content.py  mdx_parser.py
backend/src/services/: auth.py  embeddings.py  gemini.py  prompts.py  qdrant.py  rag.py
backend/tests/: conftest.py
code/: README.md
dashboard/: index.html
docs/: index.html
docs/instructor-guide/course-breakdown/: index.html
docs/module-1-intro/: index.html
docs/module-1-intro/embodied-intelligence/: index.html
docs/module-1-intro/humanoid-advantages/: index.html
docs/module-1-intro/sensor-systems/: index.html
docs/module-1-intro/what-is-physical-ai/: index.html
docs/module-2-ros2/: index.html
docs/module-3-simulation/: index.html
docs/module-4-isaac/: index.html
docs/module-5-vla/: index.html
frontend/: .env.example  .env.production  .eslintignore  .eslintrc.js  .prettierignore  Dockerfile  docusaurus.config.ts  jest.config.js  nginx.conf  package-lock.json  package.json  sidebars.ts  tsconfig.json
frontend/docs/: intro.mdx
frontend/tests/: setup.ts
scripts/: setup-dev.sh
specs/001-physical-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+51 files in other folders)
